 . [FIX] Menu: MenuItemLabel restores the scale property (issue #500)
 . [FIX] SpriteFrameCache: set singleton to nil when it is purged (issue #814)
 . [FIX] Templates: thumb-compilation turned off at project settings (already off in target settings) (issue #772)
 . [FIX] Texture2D allocs the right texturememory when using the non-premultiplied alg.(issue #813)
 . [3RD] Libpng: updated to v1.4.1 (libpng is only used by a cocos2d test)

version 0.99.1-rc - 12-Mar-2010
 . [NEW] Actions: new added actions: CCProgressTo, CCProgressFromTo (issue #783)
 . [NEW] CGPointExtensions: new add functions:  CGPointExtension like: clampf, ccpClamp, ccpFromSize,
			ccpCompOp, ccpLerp, ccpFuzzyEqual, ccpCompMult, ccpAngleSigned, ccpAngle,
			ccpRotateByAngle, ccpLineIntersect (issue #783)
 . [NEW] Macros: added CCLOGINFO() and CCLOGERROR(). CCLOGINFO() disabled by default (issue #799)
 . [NEW] SpriteFrameCache: added support for Zwoptex Desktop version (issue #812)
 . [NEW] TMX: if layer contains cc_vertezx=automatic, tiles will use vertexZ and GL_ALPHA_TEST (issue #780)
 . [NEW] TMX: TMXLayer supports Tiled offset property (issue #616)
 . [NEW] TMX: Added support for .tsx tilesets (issue #619)
 . [NEW] Transition: new added transitions: CCRadialCCWTransition, CCRadialCWTransition (issue #783)
 . [FIX] All: cocos2d constants start with kCC. Change is backward compatible (issue #809)
 . [FIX] Actions: CCRepeat works smoothly, without jerks (re-fixed issue #390)
 . [FIX] Actions: CCAnimate frame calculation is more precise (issue #758)
 . [FIX] CocosDenshion: Fixed mute (issue #789)
 . [FIX] RenderTexture: removed limit when saving images (issue #782)
 . [FIX] RenderTexture: doesn't use GL_DITHER and restores glColorMask() (issue #796)
 . [FIX] Sprite, LabelAtlas, TiledMap: opactiy + color works even when the texture is premultiplied (issue #668)
 . [FIX] TMX: TMXTileMap supports any kind of objects, like CCSprite (issue #700, #765)